# Videofilm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  csrf.py  db.py  deps.py  main.py  models.py
app/admin/: routes.py
app/auth/: backup_codes.py  deps.py  passwords.py  routes.py  sessions.py  totp.py
app/download/: routes.py
app/metadata/: ffprobe.py  kinopoisk.py  matcher.py  tmdb.py  types.py
app/streaming/: ffmpeg_runner.py  routes.py  stream_registry.py  watchdog.py
app/torrents/: client.py  routes.py  scanner.py  series_grouper.py  title_parser.py  types.py
deploy/: Caddyfile.template  install.sh  update.sh
deploy/cron/: backup-db.cron  ddns-update.cron
deploy/fail2ban/: mediasrv-filter.conf  mediasrv.conf
deploy/systemd/: mediasrv.service  qbittorrent-nox.service
docs/: DEPLOYMENT.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_drop_2fa.py  0002_remove_2fa.py  0003_catalog_metadata_and_audio.py  0003_multi_file_torrents.py  0004_episodes.py
scripts/: backup_db.sh  create_admin.py  create_multi_audio_fixture.sh  ddns_update.sh
static/: style.css
templates/: _library_grid.html  _match_dialog.html  _media_edit_modal.html  add_torrent.html  admin_health.html  admin_users.html  base.html  change_password.html  downloads.html  enroll_2fa.html  library.html  login.html  media.html  media_episode.html  media_series.html  torrent.html  verify_totp.html
tests/: conftest.py
tests/fixtures/: multi_audio.mkv
tests/integration/: test_admin_users.py  test_app_starts.py  (+19 more)
(+43 files in other folders)
